# testimony-vault-scribe

./: .env.template  .gitignore  .pre-commit-config.yaml  .secrets.baseline  PAGINATION_IMPLEMENTATION.md  README.md  docker-compose.yml  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
.github/workflows/: pre-commit.yml  python-tests.yml
backend/: CELERY_SETUP.md  Dockerfile  README_embeddings.md  add_summaries_migration.py  eval_summaries.py  pyproject.toml  requirements.txt  run_worker.py  temp_transcript.txt  test_embeddings.py  test_pagination.py  test_summarization.py  test_whisper.py  test_whisper.py.disabled
backend/app/: crud.py  main.py
backend/migrations/: add_summaries_to_existing_testimonies.py  backfill_resummaries_with_prompt.py  embed_existing_summaries.py  remove_summary_sections.py
backend/src/app/: __init__.py  crud.py  deps.py  main.py  schemas.py  tasks.py  utils.py  worker.py
backend/src/testimony_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_crud.py  test_pagination.py
db/migrations/: 20250605_add_testimony_chunks.sql
src/: App.tsx  index.css
src/components/: AuthGuard.tsx  DashboardLayout.tsx  FileUpload.tsx  LanguageSwitcher.tsx  Pagination.tsx  SearchFilters.tsx  TestimonyCard.tsx  TestimonyDetail.tsx  UserProfile.tsx
src/integrations/supabase/: client.ts  types.ts
src/lib/: i18n.ts
src/pages/: AboutPage.tsx  AuthPage.tsx  DashboardPage.tsx  Index.tsx  NotFound.tsx  SearchPage.tsx  UploadPage.tsx
src/semantic/: README.md  chunker.py  config.py  embedder.py  index_testimonies.py
src/services/: mockData.ts  testimonyService.ts
src/types/: testimony.ts
src/utils/: auth.ts
supabase/: config.toml
tests/: conftest.py  test_semantic.py
